# bevy_fast_outline

./: .gitignore  Cargo.toml  README.md
examples/: mesh_outline.rs
src/: lib.rs  outline.rs  outline_2d.wgsl  plugin.rs  types.wgsl
