# Heavily inspired by: https://github.com/TheBevyFlock/bevy_new_2d

[package]
name = "bevy_fast_outline"
# NOTE: Update with full semantic version on each release
version = "0.0.1"
edition = "2024"
license = "Apache-2.0 OR MIT"
categories = ["game-engines", "graphics", "rendering"]
description = "Simple 2D pixel art outline for Bevy focused on performance over features."
authors = ["Leopold Meinel"]
repository = "https://github.com/leomeinel/bevy_fast_outline"
readme = "README.md"
exclude = ["assets/*", "static/*"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", default-features = false, features = [
 "bevy_core_pipeline",
 "bevy_log",
 "bevy_sprite_render",
] }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", default-features = false, features = [
 "2d",
 "webp",
 "debug",
] }

[package.metadata.bevy_cli.release]
# Disable dev features for release builds.
default-features = false

[package.metadata.bevy_cli.web]
# Disable native features for web builds.
default-features = false

[package.metadata.bevy_cli.web.dev]
features = ["dev"]

[lints.rust]
# Mark `bevy_lint` as a valid `cfg`, as it is set when the Bevy linter runs.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"

# You can configure the warning levels of Bevy lints here. For a list of all lints, see:
# <https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/>
[package.metadata.bevy_lint]
# panicking_methods = "deny"
# pedantic = "warn"

# Compile with Performance Optimizations:
# <https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations>

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
# FIXME: Remove workaround for https://github.com/rust-lang/rust/issues/81280 after it has been fixed
incremental = false

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.web-dev]
inherits = "dev"

[profile.web-dev.package."*"]
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
strip = "symbols"

# This profile will be used by `bevy run web` automatically.
[profile.web-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"

# Optimize for build time in CI.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
